--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="container">
         <header>
             <div class="header-bar">
-                <img src="./img/lambda-black.png">
+                <img class="logo" src="./img/lambda-black.png">
                 <nav>
-                    <a href="./index.html">Home</a>
+                    <a href="#">Home</a>
                     <a href="./about.html">About</a>
                     <a href="#">Products</a>
                     <a href="#">Blog</a>
