--- a/about.html
+++ b/about.html
@@ -103,9 +103,9 @@
         
       <footer>
         <nav>
-          <a href="index.html">Home</a>
+          <a href="./index.html">Home</a>
           <a href="#">About</a>
-          <a href="#">Products</a>
+          <a href="./products.html">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
